Fix for code block where the margin between divs was interfering with the spacing of the whole code block

--- a/blocks/code/code.css
+++ b/blocks/code/code.css
@@ -348,9 +348,11 @@ pre[id].linkable-line-numbers span.line-numbers-rows>span:hover:before {
     background-color: rgba(128, 128, 128, .2)
 }
 
-/* MODIFIED: added the four rules below */
+/* MODIFIED: added the rules below */
 div.line {
     padding-left: 3.8em;
+  padding-top:0;
+  margin: 0;
 }
 
 div.line:hover {
